infra/flask/flask-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: flask-svc
  name: flask-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: flask-http
  type: ClusterIP
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: flask-service-local
#  namespace: jpolizzi-dsc202
#spec:
#  selector:
#    app: flask
#  ports:
#    - protocol: TCP
#      port: 5001
#      targetPort: 5001
#  type: ClusterIP
